noctel-gitops/networking/pdx1/management/traefik-management-ingressclass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  annotations:
    ingressclass.kubernetes.io/is-default-class: "false"
  labels:
    app.kubernetes.io/instance: traefik-management
    app.kubernetes.io/name: traefik
  name: traefik-management
spec:
  controller: traefik.io/ingress-controller
